--- a/src/app/components/sub-categories/agencies/companies/commercial-present/commercial-present/commercial-present.component.html
+++ b/src/app/components/sub-categories/agencies/companies/commercial-present/commercial-present/commercial-present.component.html
@@ -1,3 +1,4 @@
+<app-request></app-request>
 <mat-accordion>
   <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" >
     <mat-expansion-panel-header >
@@ -5,7 +6,7 @@
         الطرف الأول
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>person_add</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <app-first-party></app-first-party>
@@ -21,7 +22,7 @@
         الطرف الثاني
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>person_add</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
 
@@ -39,7 +40,7 @@
         الشهود
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>group_add</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
 
@@ -57,7 +58,7 @@
         النماذج لوكالة لشركة/مؤسسة قائمة
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>library_books</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <app-debaga></app-debaga>
@@ -73,7 +74,7 @@
         المرفقات
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>library_books</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
@@ -90,7 +91,7 @@
         تقدير الرسوم والتحصيل
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>monetization_on</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
