--- a/src/app/components/sub-categories/agencies/personal-issues/finishing-marriage/finishing-marriage/finishing-marriage.component.html
+++ b/src/app/components/sub-categories/agencies/personal-issues/finishing-marriage/finishing-marriage/finishing-marriage.component.html
@@ -1,9 +1,4 @@
-<button mat-fab color="basic" type="button" matTooltip="رمز المكتب">
-  <mat-icon class="icon-size">add_circle_outline</mat-icon>
-</button>
-
-
-
+<app-request></app-request>
 <mat-accordion>
   <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" >
     <mat-expansion-panel-header >
