fix after update

--- a/src/assets/resources/scss/base/_base.scss
+++ b/src/assets/resources/scss/base/_base.scss
@@ -36,7 +36,7 @@ html {
   text-rendering: optimizeLegibility;
 }
 body {
-  background-image: url("src/assets/resources/img/Mosque_Oman.jpg");
+  background-image: url("~src/assets/resources/img/Mosque_Oman.jpg");
   box-sizing: border-box;
   line-height: 1.6;
   min-height: 95vh;
