--- a/src/assets/resources/scss/layout/_footer.scss
+++ b/src/assets/resources/scss/layout/_footer.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   right: 0;
   left: 0;
-  background-image: url("src/assets/resources/img/header.png");
+  background-image: url("~src/assets/resources/img/header.png");
   height: 45px;
   background-position: center;
   .hero-text-box-footer {
