--- a/src/assets/resources/scss/layout/_header.scss
+++ b/src/assets/resources/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-image: url("src/assets/resources/img/header.png");
+  background-image: url("~src/assets/resources/img/header.png");
   height: 45px;
   background-position: center;
   display: flex;
